--- a/app/src/main/res/layout/activity_googlecards_card.xml
+++ b/app/src/main/res/layout/activity_googlecards_card.xml
@@ -20,6 +20,14 @@
             android:text="New Text"
             android:layout_gravity="center"
             android:id="@+id/place" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="3dp"
+            android:id="@+id/imageView"
+            android:src="@drawable/defaultweathericon"/>
     </LinearLayout>
 
     <LinearLayout
