--- a/app/src/main/res/layout/activity_googlecards_card.xml
+++ b/app/src/main/res/layout/activity_googlecards_card.xml
@@ -1,77 +1,156 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/weatherinfo"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/card_background_white"
     android:orientation="horizontal"
-    android:padding="0dp"
-    android:id="@+id/weatherinfo">
+    android:padding="0dp">
 
     <LinearLayout
+        android:id="@+id/current"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1"
         android:layout_margin="10dp"
-        android:orientation="vertical"
-        android:id="@+id/current">
+        android:layout_weight="1"
+        android:orientation="vertical">
+
         <TextView
+            android:id="@+id/place"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="New Text"
             android:layout_gravity="center"
-            android:id="@+id/place" />
+            android:text="New Text" />
 
         <ImageView
+            android:id="@+id/imageView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_margin="3dp"
-            android:id="@+id/imageView"
-            android:src="@drawable/defaultweathericon"/>
+            android:src="@drawable/defaultweathericon" />
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/forecast"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:orientation="vertical"
         android:layout_margin="10dp"
         android:layout_marginLeft="40dp"
-        android:id="@+id/forecast">
-        <TextView
+        android:layout_weight="1"
+        android:orientation="vertical">
+
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="New Text"
-            android:layout_gravity="center"
-            android:id="@+id/first" />
-        <TextView
+            android:orientation="horizontal"
+            >
+
+            <TextView
+                android:id="@+id/firstDay"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="New Text"
+                android:textSize="9dp"/>
+
+            <ImageView
+                android:id="@+id/firstDayIcon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_margin="9dp"
+                android:src="@drawable/defaultweathericon" />
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="New Text"
-            android:layout_gravity="center"
-            android:id="@+id/second" />
-        <TextView
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/secondDay"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="New Text"
+                android:textSize="9dp"/>
+
+            <ImageView
+                android:id="@+id/secondDayIcon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_margin="9dp"
+                android:src="@drawable/defaultweathericon" />
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="New Text"
-            android:layout_gravity="center"
-            android:id="@+id/third" />
-        <TextView
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/thirdDay"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="New Text"
+                android:textSize="9dp"/>
+
+            <ImageView
+                android:id="@+id/thidDayIcon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_margin="9dp"
+                android:src="@drawable/defaultweathericon" />
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="New Text"
-            android:layout_gravity="center"
-            android:id="@+id/fourth"
-            android:gravity="center" />
-        <TextView
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/fourthDay"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="New Text"
+                android:textSize="9dp"/>
+
+            <ImageView
+                android:id="@+id/fourthDayIcon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_margin="9dp"
+                android:src="@drawable/defaultweathericon" />
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="New Text"
-            android:layout_gravity="center"
-            android:id="@+id/fifth" />
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/fifthDay"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="New Text"
+                android:textSize="9dp"/>
+
+            <ImageView
+                android:id="@+id/fifthDayIcon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_margin="9dp"
+                android:src="@drawable/defaultweathericon" />
+        </LinearLayout>
     </LinearLayout>
-
-
 
 
 </LinearLayout>
