--- a/app/src/main/res/layout/activity_googlecards_card.xml
+++ b/app/src/main/res/layout/activity_googlecards_card.xml
@@ -39,7 +39,6 @@
         android:layout_marginLeft="40dp"
         android:layout_weight="1"
         android:orientation="vertical">
-
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -52,15 +51,29 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="New Text"
-                android:textSize="9dp"/>
+                android:textSize="9sp"
+                android:layout_weight="1"/>
 
             <ImageView
                 android:id="@+id/firstDayIcon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="10dp"
                 android:layout_gravity="center"
-                android:layout_margin="9dp"
                 android:src="@drawable/defaultweathericon" />
+
+            <TextView
+                android:id="@+id/firstWeatherCondition"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Weather condition"
+                android:textSize="9sp"
+                android:layout_gravity="center"
+                android:singleLine="false"
+                android:layout_weight="1"/>
+
+
+
         </LinearLayout>
 
         <LinearLayout
@@ -74,7 +87,8 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="New Text"
-                android:textSize="9dp"/>
+                android:textSize="9sp"
+                android:layout_weight="1" />
 
             <ImageView
                 android:id="@+id/secondDayIcon"
@@ -82,7 +96,20 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_margin="9dp"
-                android:src="@drawable/defaultweathericon" />
+                android:src="@drawable/defaultweathericon"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentBottom="true" />
+
+            <TextView
+                android:id="@+id/secondWeatherCondition"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="Weather condition"
+                android:textSize="9sp"
+                android:singleLine="false"
+                android:layout_weight="2"/>
+
         </LinearLayout>
 
         <LinearLayout
@@ -96,7 +123,9 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="New Text"
-                android:textSize="9dp"/>
+                android:textSize="9sp"
+                android:layout_weight="1"
+                />
 
             <ImageView
                 android:id="@+id/thidDayIcon"
@@ -105,6 +134,17 @@
                 android:layout_gravity="center"
                 android:layout_margin="9dp"
                 android:src="@drawable/defaultweathericon" />
+
+            <TextView
+                android:id="@+id/thirdWeatherCondition"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="Weather condition"
+                android:textSize="9sp"
+                android:singleLine="false"
+                android:layout_weight="2"/>
+
         </LinearLayout>
 
         <LinearLayout
@@ -118,7 +158,9 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="New Text"
-                android:textSize="9dp"/>
+                android:textSize="9sp"
+                android:layout_weight="1"
+                />
 
             <ImageView
                 android:id="@+id/fourthDayIcon"
@@ -127,6 +169,17 @@
                 android:layout_gravity="center"
                 android:layout_margin="9dp"
                 android:src="@drawable/defaultweathericon" />
+
+            <TextView
+                android:id="@+id/fourthWeatherCondition"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="Weather condition"
+                android:textSize="9sp"
+                android:singleLine="false"
+                android:layout_weight="2"/>
+
         </LinearLayout>
 
         <LinearLayout
@@ -140,7 +193,9 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="New Text"
-                android:textSize="9dp"/>
+                android:textSize="9sp"
+                android:layout_weight="1"
+                />
 
             <ImageView
                 android:id="@+id/fifthDayIcon"
@@ -149,6 +204,16 @@
                 android:layout_gravity="center"
                 android:layout_margin="9dp"
                 android:src="@drawable/defaultweathericon" />
+            <TextView
+                android:id="@+id/fifthWeatherCondition"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="Weather condition"
+                android:textSize="9sp"
+                android:singleLine="false"
+                android:layout_weight="2"/>
+
         </LinearLayout>
     </LinearLayout>
 
