--- a/app/src/main/res/layout/activity_googlecards_card.xml
+++ b/app/src/main/res/layout/activity_googlecards_card.xml
@@ -20,12 +20,32 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="New Text" />
+            android:layout_margin="10dp"
+            android:text="New Text"
+            android:textSize="15sp" />
+
+        <TextView
+            android:id="@+id/currentlabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+            android:text="Now:"
+            android:textSize="15sp" />
+
+        <TextView
+            android:id="@+id/currentCondition"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="Current condition"
+            android:textSize="15sp" />
+
 
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
             android:layout_gravity="center"
             android:layout_margin="3dp"
             android:src="@drawable/defaultweathericon" />
@@ -35,44 +55,43 @@
         android:id="@+id/forecast"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="10dp"
-        android:layout_marginLeft="40dp"
-        android:layout_weight="1"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="6dp"
+        android:layout_marginTop="10dp"
+        android:layout_weight=".8"
         android:orientation="vertical">
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            >
+            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/firstDay"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:layout_weight="1"
                 android:text="New Text"
-                android:textSize="9sp"
-                android:layout_weight="1"/>
+                android:textSize="9sp" />
 
             <ImageView
                 android:id="@+id/firstDayIcon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp"
                 android:layout_gravity="center"
+                android:layout_margin="9dp"
                 android:src="@drawable/defaultweathericon" />
 
             <TextView
                 android:id="@+id/firstWeatherCondition"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Weather condition"
-                android:textSize="9sp"
                 android:layout_gravity="center"
+                android:layout_weight="2"
                 android:singleLine="false"
-                android:layout_weight="1"/>
-
-
+                android:text="Weather condition"
+                android:textSize="9sp" />
 
         </LinearLayout>
 
@@ -86,9 +105,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:layout_weight="1"
                 android:text="New Text"
-                android:textSize="9sp"
-                android:layout_weight="1" />
+                android:textSize="9sp" />
 
             <ImageView
                 android:id="@+id/secondDayIcon"
@@ -96,19 +115,17 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_margin="9dp"
-                android:src="@drawable/defaultweathericon"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentBottom="true" />
+                android:src="@drawable/defaultweathericon" />
 
             <TextView
                 android:id="@+id/secondWeatherCondition"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="Weather condition"
-                android:textSize="9sp"
+                android:layout_weight="2"
                 android:singleLine="false"
-                android:layout_weight="2"/>
+                android:text="Weather condition"
+                android:textSize="9sp" />
 
         </LinearLayout>
 
@@ -122,10 +139,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="New Text"
-                android:textSize="9sp"
                 android:layout_weight="1"
-                />
+                android:text="New Text"
+                android:textSize="9sp" />
 
             <ImageView
                 android:id="@+id/thidDayIcon"
@@ -140,10 +156,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="Weather condition"
-                android:textSize="9sp"
+                android:layout_weight="2"
                 android:singleLine="false"
-                android:layout_weight="2"/>
+                android:text="Weather condition"
+                android:textSize="9sp" />
 
         </LinearLayout>
 
@@ -157,10 +173,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="New Text"
-                android:textSize="9sp"
                 android:layout_weight="1"
-                />
+                android:text="New Text"
+                android:textSize="9sp" />
 
             <ImageView
                 android:id="@+id/fourthDayIcon"
@@ -175,10 +190,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="Weather condition"
-                android:textSize="9sp"
+                android:layout_weight="2"
                 android:singleLine="false"
-                android:layout_weight="2"/>
+                android:text="Weather condition"
+                android:textSize="9sp" />
 
         </LinearLayout>
 
@@ -192,10 +207,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="New Text"
-                android:textSize="9sp"
                 android:layout_weight="1"
-                />
+                android:text="New Text"
+                android:textSize="9sp" />
 
             <ImageView
                 android:id="@+id/fifthDayIcon"
@@ -204,15 +218,16 @@
                 android:layout_gravity="center"
                 android:layout_margin="9dp"
                 android:src="@drawable/defaultweathericon" />
+
             <TextView
                 android:id="@+id/fifthWeatherCondition"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="Weather condition"
-                android:textSize="9sp"
+                android:layout_weight="2"
                 android:singleLine="false"
-                android:layout_weight="2"/>
+                android:text="Weather condition"
+                android:textSize="9sp" />
 
         </LinearLayout>
     </LinearLayout>
