--- a/app/src/main/res/layout/activity_googlecards_card.xml
+++ b/app/src/main/res/layout/activity_googlecards_card.xml
@@ -43,7 +43,7 @@
 
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/currentDayIcon"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_gravity="center"
