--- a/app/src/main/res/layout/fragment_weather_app_main.xml
+++ b/app/src/main/res/layout/fragment_weather_app_main.xml
@@ -32,25 +32,36 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-
-        <ListView
-            android:id="@android:id/list"
+        <uk.co.senab.actionbarpulltorefresh.library.PullToRefreshLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/ptr_layout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:drawSelectorOnTop="false"
-            android:dividerHeight="0dp"
-            android:divider="@null"/>
+            android:layout_height="match_parent">
+
+            <!-- Your content, here we're using a ScrollView -->
+
+            <ListView
+                android:id="@android:id/list"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:drawSelectorOnTop="false"
+                android:dividerHeight="0dp"
+                android:divider="@null"/>
+
+        </uk.co.senab.actionbarpulltorefresh.library.PullToRefreshLayout>
+
+            <com.melnykov.fab.FloatingActionButton
+                android:id="@+id/button_floating_action"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|right"
+                android:layout_margin="16dp"
+                android:src="@drawable/ic_action_content_new"
+                fab:fab_colorNormal="@android:color/holo_red_dark"
+                fab:fab_colorPressed="@android:color/holo_red_light"/>
 
 
-        <com.melnykov.fab.FloatingActionButton
-            android:id="@+id/button_floating_action"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|right"
-            android:layout_margin="16dp"
-            android:src="@drawable/ic_action_content_new"
-            fab:fab_colorNormal="@android:color/holo_red_dark"
-            fab:fab_colorPressed="@android:color/holo_red_light"/>
+
     </FrameLayout>
 
 
