Duplicated bug corrected

--- a/app/src/main/res/layout/fragment_weather_app_main.xml
+++ b/app/src/main/res/layout/fragment_weather_app_main.xml
@@ -45,8 +45,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:drawSelectorOnTop="false"
-                android:dividerHeight="0dp"
-                android:divider="@null"/>
+                android:divider="@android:color/transparent"
+                android:dividerHeight="10dp"/>
 
         </uk.co.senab.actionbarpulltorefresh.library.PullToRefreshLayout>
 
