--- a/app/src/main/res/menu/weather_list_menu.xml
+++ b/app/src/main/res/menu/weather_list_menu.xml
@@ -6,6 +6,5 @@
         android:id="@+id/refresh"
         android:icon="@android:drawable/ic_menu_upload"
         weatherapp:showAsAction="always"
-        android:title="R.id.refresh">
-    </item>
+        android:title="R.id.refresh"></item>
 </menu>
