--- a/app/src/main/res/values-sw600dp/refs.xml
+++ b/app/src/main/res/values-sw600dp/refs.xml
@@ -7,6 +7,8 @@
     For more on layout aliases, see:
     http://developer.android.com/training/multiscreen/screensizes.html#TaskUseAliasFilters
     -->
-    <item name="fragment_detailedweatherforecast" type="layout">@layout/fragment_detailedweatherforecast_grid</item>
+    <item name="fragment_detailedweatherforecast" type="layout">
+        @layout/fragment_detailedweatherforecast_grid
+    </item>
 
 </resources>
