--- a/app/src/main/res/values/styles_weatherapp.xml
+++ b/app/src/main/res/values/styles_weatherapp.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!-- File created by the Android Action Bar Style Generator
+<?xml version="1.0" encoding="utf-8"?><!-- File created by the Android Action Bar Style Generator
 
      Copyright (C) 2011 The Android Open Source Project
      Copyright (C) 2012 readyState Software Ltd
@@ -30,7 +29,7 @@
         <item name="actionModeSplitBackground">@drawable/cab_background_bottom_weatherapp</item>
         <item name="actionModeCloseButtonStyle">@style/ActionButton.CloseMode.Weatherapp</item>
 
-        
+
     </style>
 
     <style name="ActionBar.Solid.Weatherapp" parent="@style/Widget.AppCompat.Light.ActionBar.Solid">
@@ -44,11 +43,11 @@
         <item name="background">@drawable/ab_transparent_weatherapp</item>
         <item name="progressBarStyle">@style/ProgressBar.Weatherapp</item>
     </style>
-	
-    <style name="PopupMenu.Weatherapp" parent="@style/Widget.AppCompat.Light.PopupMenu">	
-        <item name="android:popupBackground">@drawable/menu_dropdown_panel_weatherapp</item>	
+
+    <style name="PopupMenu.Weatherapp" parent="@style/Widget.AppCompat.Light.PopupMenu">
+        <item name="android:popupBackground">@drawable/menu_dropdown_panel_weatherapp</item>
     </style>
-	
+
     <style name="DropDownListView.Weatherapp" parent="@style/Widget.AppCompat.Light.ListView.DropDown">
         <item name="android:listSelector">@drawable/selectable_background_weatherapp</item>
     </style>
@@ -56,21 +55,21 @@
     <style name="ActionBarTabStyle.Weatherapp" parent="@style/Widget.AppCompat.Light.ActionBar.TabView">
         <item name="android:background">@drawable/tab_indicator_ab_weatherapp</item>
     </style>
-	
+
     <style name="DropDownNav.Weatherapp" parent="@style/Widget.AppCompat.Light.Spinner.DropDown.ActionBar">
         <item name="android:background">@drawable/spinner_background_ab_weatherapp</item>
         <item name="android:popupBackground">@drawable/menu_dropdown_panel_weatherapp</item>
         <item name="android:dropDownSelector">@drawable/selectable_background_weatherapp</item>
     </style>
-    
+
     <style name="ProgressBar.Weatherapp" parent="@style/Widget.AppCompat.ProgressBar.Horizontal">
         <item name="android:progressDrawable">@drawable/progress_horizontal_weatherapp</item>
     </style>
-    
+
     <style name="ActionButton.CloseMode.Weatherapp" parent="@style/Widget.AppCompat.Light.ActionButton.CloseMode">
         <item name="android:background">@drawable/btn_cab_done_weatherapp</item>
     </style>
-    
+
     <!-- this style is only referenced in a Light.DarkActionBar based theme -->
     <style name="Theme.Weatherapp.Widget" parent="@style/Theme.AppCompat">
         <item name="popupMenuStyle">@style/PopupMenu.Weatherapp</item>
